--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    
+    <div id= "item-container">
+        
+    </div>
 </body>
 </html>
