--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    <div id= "item-container">
-        
+    <div id= "list-container">
+
     </div>
 </body>
 </html>
