refactor using more OOJS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script type="text/javascript" src="src/index.js"></script>
 </head>
 <body>
-    
+    <form id="create-new-list">
+    <input type="text" name="title" placeholder="Title">
+    <button type="submit" name="submit">Create A New List</button>
+    </form>
 </body>
 </html>
