--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0008f06961.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="src/list.js"></script>
     <script type="text/javascript" src="src/item.js"></script>
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/index2.js"></script>
 </head>
 <body>
     <form id="create-new-list">
